# roygbiv-rs

./: Cargo.toml
src/: main.rs
